# led-ticker-calendar

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: config.calendar_smoketest.toml
docs/superpowers/plans/: 2026-06-16-calendar-extraction-phase2-plugin-repo.md
src/led_ticker_calendar/: __init__.py  calendar.py
tests/: conftest.py  test_calendar.py  test_calendar_corpus.py  test_calendar_next_selection.py  test_calendar_recurrence_cost.py  test_calendar_tz_invariant.py  test_calendar_validate.py  test_import_purity.py  test_smoke.py
tests/fixtures/: calendar_sample.ics
tests/fixtures/calendar_corpus/: all_day_span.ics  cancelled.ics  floating_time.ics  google_basic.ics  mismatched_all_day.ics  multi_rrule.ics  non_ascii.ics  outlook_bom.ics  recurring_daily.ics  summary_newline.ics
