[project]
name = "led-ticker-calendar"
version = "0.1.0"
description = "Calendar (.ics) agenda/next/two_row widget for led-ticker."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "James Awesome", email = "james@morelli.nyc" }]
dependencies = [
    "led-ticker",
    "aiohttp",
    "icalendar>=6.1",
    "recurring-ical-events>=3.0",
]

# The plugin is contributed to led-ticker via this entry point. The entry-point
# NAME ("calendar") becomes the plugin namespace, so the widget is referenced in
# TOML as `type = "calendar.events"`.
[project.entry-points."led_ticker.plugins"]
calendar = "led_ticker_calendar:register"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/led_ticker_calendar"]

# led-ticker is not published to PyPI yet. For local development, install it
# editable from a checkout alongside this plugin (see README "Development").
# Drop this source pin once led-ticker is published.
[tool.uv.sources]
led-ticker = { path = "../led-ticker", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["../led-ticker/tests/stubs"]

[tool.ruff]
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.14"
extraPaths = ["../led-ticker/tests/stubs"]

[tool.coverage.report]
fail_under = 90
